Clean and remove unwanted libraries for first page

--- a/public/index.html
+++ b/public/index.html
@@ -52,21 +52,7 @@
     <link href="css/animate.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
-      integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/conflict-detection.min.js"
-      integrity="sha512-gBkIg9cXQqh9xQvsqYd9zUPMuhMI+eKS/KDogjece72OS0AbiGCC4o78MXrAJIVvOYHvPbAxOyO0qZNs8uEngw=="
-      crossorigin="anonymous"
-    ></script>
+    
   </head>
 
   <body id="minibar" class="mini-navbar">
@@ -156,24 +142,24 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <!-- <script src="js/jquery-3.1.1.min.js"></script> -->
+    <!-- <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script> -->
+    <!-- <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script> -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
       integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
       crossorigin="anonymous"
     ></script>
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/conflict-detection.min.js"
       integrity="sha512-gBkIg9cXQqh9xQvsqYd9zUPMuhMI+eKS/KDogjece72OS0AbiGCC4o78MXrAJIVvOYHvPbAxOyO0qZNs8uEngw=="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     <!-- Custom and plugin javascript -->
-    <script src="js/mainscript.js"></script>
+    <!-- <script src="js/mainscript.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
     <script src="js/plugins/peity/jquery.peity.min.js"></script>
     <script src="js/demo/peity-demo.js"></script>
@@ -182,13 +168,13 @@
     <script src="js/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.9.0/js/lightgallery-all.min.js"></script>
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-    <script
+    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script> -->
+    <!-- <script
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
+    ></script> -->
 
-    <script>
+    <!-- <script>
       $(".multiple-items").slick({
         infinite: false,
         slidesToShow: 6,
@@ -214,9 +200,9 @@
           },
         ],
       });
-    </script>
+    </script> -->
 
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         $("#sparkline1").sparkline([34, 43, 43, 35, 44, 32, 44, 48], {
           type: "line",
@@ -226,8 +212,8 @@
           fillColor: "transparent",
         });
       });
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
       $(document).ready(function () {
         $("#lightVersion").click(function (event) {
           event.preventDefault();
@@ -248,15 +234,15 @@
           $("#vertical-timeline").toggleClass("center-orientation");
         });
       });
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
       if ($(window).width() < 767) {
         $("#minibar").removeClass("mini-navbar");
       } else {
         $("#minibar").addClass("mini-navbar");
       }
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
       filterSelection("all");
 
       function filterSelection(c) {
@@ -301,8 +287,8 @@
           this.className += " current";
         });
       }
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
       function myFunction() {
         document.getElementById("myDropdown").classList.toggle("show");
       }
@@ -324,14 +310,14 @@
       $(document).ready(function () {
         $("#lightgallery").lightGallery();
       });
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
       $("#filteroption").change(function () {
         var selectItem = $(this).val();
         filter(selectItem);
-      });
+      }); -->
 
-      function filter(e) {
+      <!-- function filter(e) {
         // var regex = new RegExp("\\b\\w*" + e + "\\w*\\b");
         // $(".filterDiv")
         //   .hide()
@@ -345,6 +331,6 @@
         //   $(".empty").hide();
         // }
       }
-    </script>
+    </script> -->
   </body>
 </html>
