--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
-    <title>Vintage Store</title>
+    <title>Doorcares | Manage your tenancy with ease</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
