collapse added, modal added

--- a/public/index.html
+++ b/public/index.html
@@ -55,81 +55,12 @@
     
   </head>
 
-  <body id="minibar" class="mini-navbar">
+  <body class="mini-navbar">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="wrapper">
       <div id="root"></div>
     </div>
-    <div
-      class="modal inmodal fade"
-      id="additionalinfo"
-      tabindex="-1"
-      role="dialog"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">
-              <span aria-hidden="true">&times;</span
-              ><span class="sr-only">Close</span>
-            </button>
-            <h4 class="modal-title text-completedtask text-left ml-3">
-              Select Property
-            </h4>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="container">
-                  <div class="row justify-content-center">
-                    <div class="col-12 p-0 align-self-center">
-                      <div class="media">
-                        <img
-                          alt="image"
-                          src="img/a4.jpg"
-                          class="img-fluid rounded-border align-self-center mr-3"
-                          width="50px"
-                        />
-
-                        <div class="media-body align-self-center">
-                          <span class="m-0 text-completedtask">
-                            Puteri Palma Condo
-                          </span>
-                          <span>
-                            <i class="fas fa-arrow-right fa-xs float-right"></i>
-                          </span>
-                        </div>
-                      </div>
-                      <hr />
-                    </div>
-                    <div class="col-12 p-0 align-self-center mb-4">
-                      <div class="media">
-                        <img
-                          alt="image"
-                          src="img/a8.jpg"
-                          class="img-fluid rounded-border align-self-center mr-3"
-                          width="50px"
-                        />
-
-                        <div class="media-body align-self-center">
-                          <span class="m-0 text-completedtask">
-                            No.63 Port Dickson
-                          </span>
-                          <span>
-                            <i class="fas fa-arrow-right fa-xs float-right"></i>
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
     <!--
       This HTML file is a template.
